# xtensor-benchmark

./: CMakeLists.txt  README.md  bench_over_time.py  environment.yml  exploration.ipynb
modules/: FindPythran.cmake  copyGBenchmark.cmake.in  downloadGBenchmark.cmake.in
src/: benchmark.hpp  benchmark_1D.hpp  benchmark_2D.hpp  benchmark_add_1d.hpp  benchmark_add_2d.hpp  benchmark_allocators.hpp  benchmark_broadcasting.hpp  benchmark_constructor.hpp  benchmark_fixed.hpp  benchmark_iterators.hpp  benchmark_lazy_evaluation.hpp  benchmark_padding.hpp  benchmark_scalar_assignment.hpp  benchmark_views.hpp  main.cpp  profile_snip.cpp
